--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "discobolo",
         "Discobolo",
         "dotenv",
         "safebrowsing",
         "sytech",
-        "Sytech"
+        "Sytech",
+        "venv"
     ]
 }
