adding 'recurrentes' --download --update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "discobolo",
         "Discobolo",
         "dotenv",
+        "rockhopper",
         "safebrowsing",
+        "skiprows",
         "sytech",
         "Sytech",
         "venv"
