--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "discobolo",
         "Discobolo",
         "dotenv",
+        "Escuelita",
         "rockhopper",
         "safebrowsing",
         "skiprows",
